@@ -54,9 +54,7 @@
 - [X] Should move media here (find CEGUI medias)
 - [ ] Must show loading progress bar
   - [ ] Bootstrap resource to show CEGUI related resources loading
-    Initialize SdkTray manager
   - [ ] Only the simplest one for the CEGUI loading game state. 
-    see http://3dlearn.googlecode.com/svn/trunk/Samples/Ogre/sinbad/Common/ExampleLoadingBar.h
   - [ ] This CEGUI state loads ressources needed for CEGUI then launch gsStart
     All the needed ressources for the game menus
   - [ ] When we choose Local test/network play, we call gsLoading, a fully
